--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styl.css">
     <title>m-beran Web</title>
 </head>
 <body>
-        <h1>The website is under construction<br>
-           (Web je ve výstavbě)
-        </h1>
+        <br>
+        <br>
+        <br>
+        <br>
+        <h1>Když se chceš ODINSTALOVAT</h1>
+        <button type="button" class="button" onclick="alert('ODINSTALOVÁNO')">ODINSTALOVAT</button>
 </body>
 </html>
