--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         const analytics = getAnalytics(app);
 
         // Initialize Realtime Database
-        const database = getDatabase(app);
+        const database = getDatabase(app, 'https://m-beransite-default-rtdb.europe-west1.firebasedatabase.app');
         const clicksRef = ref(database, 'clicks/');
 
         // Zobrazení počtu kliknutí na stránce
