Revert "Update index.html"
This reverts commit 6c0f888800373846657ecd97f9bc604f680c4364.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         const analytics = getAnalytics(app);
 
         // Initialize Realtime Database
-        const database = getDatabase(app, 'https://m-r7st4mw.subkey.dev');
+        const database = getDatabase(app, 'https://m-beransite-default-rtdb.europe-west1.firebasedatabase.app');
         const clicksRef = ref(database, 'clicks/');
 
         // Zobrazení počtu kliknutí na stránce
