--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>m-beran Web</title>
 </head>
 <body>
+    <nav>
+        <a href="/Inf/inf.html">INF(možná tahák)</a> |
+    </nav>
     <h1>Když se chceš ODINSTALOVAT</h1>
     <button type="button" class="button">ODINSTALOVAT</button>
     <p>Počet Odinstalování se: <span id="clickCounter">?</span></p>
