--- a/Inf/inf.html
+++ b/Inf/inf.html
@@ -6,6 +6,9 @@
     <title>Web INF</title>
 </head>
 <body>
+    <nav>
+        <a href="index.html">zpet</a> |
+    </nav>
     <h1>web pro inf test</h1>
     <br>
 
