--- a/Inf/inf.html
+++ b/Inf/inf.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <nav>
-        <a href="/index.html">zpet</a> |
+        <a href="https://m-beran.github.io/">zpet</a> |
     </nav>
     <h1>web pro inf test</h1>
     <br>
