--- a/Inf/inf.html
+++ b/Inf/inf.html
@@ -11,7 +11,85 @@
     </nav>
     <h1>web pro inf test</h1>
     <br>
+    <h3>jak pridat IMG</h3>
+    <h5>prostý obrázek</h5>
+    <pre>
+        &lt;img src="obrazek.jpg" alt="Popis obrázku"&gt;
+    </pre>
+    <br>
+    <h5>obrazek jako odkaz</h5>
+    <pre>
+        &lt;a href="https://example.com"&gt;
+            &lt;img src="obrazek.jpg" alt="Popis obrázku"&gt;
+        &lt;/a&gt;
+    </pre>
+    <h5>když chces otevřít v novém okně dej do &lt;a target="_blank"</h5>
 
+    <h3>pridani odkazu</h3>
+    <pre>&lt;a href="https://www.jakpsatweb.cz/">Odkaz na hlavní stránku&lt;/a></pre>
+    <h5>když chces otevřít v novém okně dej do &lt;a target="_blank"</h5>
+    <br>
+
+    <h3>Titulky (H1 atd..)</h3>
+    <pre>
+        &lt;h1&gt;Vítej na mém webu!&lt;/h1&gt;
+        &lt;h2&gt;O mně&lt;/h2&gt;
+        &lt;h3&gt;Moje projekty&lt;/h3&gt;
+        &lt;h4&gt;Technologie, které používám&lt;/h4&gt;
+        &lt;h5&gt;Kontakt&lt;/h5&gt;
+        &lt;h6&gt;Všechna práva vyhrazena&lt;/h6&gt;
+    </pre>
+    <br>
+    <h3>jak udělat čáru přes celou stranu</h3>
+    <pre>
+        &lt;hr&gt;
+        <hr>
+    </pre>
+    <br><br>
+    <h3>Classes</h3>
+    <p>Třídy (class) umožňují seskupit více prvků a stylovat je pomocí CSS nebo je ovládat pomocí JavaScriptu.
+        Např. když máme class="cervena" a v css definujeme pro class "cervena" cervenou barvu vše co bude mít tuto classu tak je automaticky červené
+        <br>
+        v HTML přidáváme classu: class="cervena"
+        <br>
+        v CSS definujeme jako: .cervena{"parametry"}
+    </p>
+
+    <h2>CSS</h2>
+    <h3>zarovnani v CSS!</h3>
+    <p>používá se text-align:
+    <br>
+        text-align: center;    &nbsp;     zarovnání na střed
+        <br><br>
+        left – doleva (výchozí)<br>
+        right – doprava<br>
+        justify – zarovná do bloku
+    </p>
+    <br><br>
+    <h3>DIV</h3>
+    <p>&lt;div> je jeden z nejdůležitějších prvků v HTML. Slouží jako kontejner pro seskupování jiných prvků. Nemá žádný vlastní vizuální styl, ale používá se k organizaci obsahu a stylování pomocí CSS.</p>
+
+    <br>
+    <pre>
+        &lt;div>
+            &lt;h2>Nadpis&lt;/h2>
+            &lt;p>Toto je odstavec uvnitř divu.&lt;/p>
+        &lt;/div>
+        
+    </pre>
+<br>
+    <p>margin v CSS určuje vzdálenost mezi prvkem a ostatními prvky. Funguje jako vnější mezera.</p>
+    <p>Width a Height Slouží k nastavení rozměrů prvku.</p>
+    <br>
+    <p>barvy v css</p>
+    <pre>
+        .text {
+            color: red; /* Červený text */
+            background-color: black; /* Černé pozadí */
+        }
+    </pre>
+    <br>
+<hr>
     <img src="cislovany.png">
     <pre>
         &lt;ol&gt;
