--- a/Inf/inf.html
+++ b/Inf/inf.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web INF</title>
 </head>
-<body>
+<body bgcolor="lightgray">
     <nav>
         <a href="https://m-beran.github.io/">zpet</a>
     </nav>
-    <h1>web pro inf test</h1>
+    <h1>web pro inf</h1>
     <br>
     <h3>jak pridat IMG</h3>
     <h5>prostý obrázek</h5>
