--- a/Inf/inf.html
+++ b/Inf/inf.html
@@ -10,7 +10,7 @@
         <a href="https://m-beran.github.io/">zpet</a>
     </nav>
     <h1>web pro inf</h1>
-    <br>
+    <br><hr>
     <h3>jak pridat IMG</h3>
     <h5>prostý obrázek</h5>
     <pre>
@@ -29,7 +29,7 @@
     <pre>&lt;a href="https://www.jakpsatweb.cz/">Odkaz na hlavní stránku&lt;/a></pre>
     <h5>když chces otevřít v novém okně dej do &lt;a target="_blank"</h5>
     <br>
-
+<hr>
     <h3>Titulky (H1 atd..)</h3>
     <pre>
         &lt;h1&gt;Vítej na mém webu!&lt;/h1&gt;
@@ -40,6 +40,7 @@
         &lt;h6&gt;Všechna práva vyhrazena&lt;/h6&gt;
     </pre>
     <br>
+    <hr>
     <h3>jak udělat čáru přes celou stranu</h3>
     <pre>
         &lt;hr&gt;
@@ -54,7 +55,7 @@
         <br>
         v CSS definujeme jako: .cervena{"parametry"}
     </p>
-
+<hr>
     <h2>CSS</h2>
     <h3>zarovnani v CSS!</h3>
     <p>používá se text-align:
@@ -65,7 +66,7 @@
         right – doprava<br>
         justify – zarovná do bloku
     </p>
-    <br><br>
+    <br><br><hr>
     <h3>DIV</h3>
     <p>&lt;div> je jeden z nejdůležitějších prvků v HTML. Slouží jako kontejner pro seskupování jiných prvků. Nemá žádný vlastní vizuální styl, ale používá se k organizaci obsahu a stylování pomocí CSS.</p>
 
@@ -76,7 +77,7 @@
             &lt;p>Toto je odstavec uvnitř divu.&lt;/p>
         &lt;/div>
         
-    </pre>
+    </pre><hr>
 <br>
     <p>margin v CSS určuje vzdálenost mezi prvkem a ostatními prvky. Funguje jako vnější mezera.</p>
     <p>Width a Height Slouží k nastavení rozměrů prvku.</p>
@@ -88,7 +89,7 @@
             background-color: black; /* Černé pozadí */
         }
     </pre>
-    <br>
+    <br><hr>
 <hr>
     <img src="cislovany.png">
     <pre>
@@ -99,6 +100,7 @@
         &lt;/ol&gt;
         </pre>
         <br>
+        <hr>
     <img src="teckovany.png">
     <pre>
         &lt;ul&gt;
@@ -108,6 +110,7 @@
         &lt;/ul&gt;
     </pre> 
     <br>
+    <hr>
     <img src="vnoreny.png">
     <pre>
         &lt;ul&gt;
@@ -160,9 +163,9 @@
             &lt;li&gt;Maják&lt;/li&gt;
         &lt;/ul&gt;
         </pre>
-    <br>
+    <br><hr>
     <img src="tabulkynapoveda.png" >
-    <br>
+    <br><hr>
     <img src="tabulkabila.png" alt="tab">
     <pre>
         &lt;table&gt;
@@ -178,7 +181,7 @@
             &lt;/tr&gt;
         &lt;/table&gt;
         </pre>
-    <br>
+    <br><hr>
     <img src="tabulkazluta.png">
     <pre>
         &lt;table&gt;
@@ -194,7 +197,7 @@
             &lt;/tr&gt;
         &lt;/table&gt;
         </pre>
-        <br>
+        <br><hr>
     <img src="colspan.png">
     <pre>
         &lt;table&gt;
@@ -209,7 +212,7 @@
             &lt;/tr&gt;
         &lt;/table&gt;
         </pre>
-        <br>
+        <br><hr>
     <img src="rawspan.png">
     <pre>
         &lt;table&gt;
