--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="/Inf/inf.html">INF(možná tahák)</a> |
+        <a href="/Inf/inf.html">INF()</a> |
     </nav>
     <h1>Když se chceš ODINSTALOVAT</h1>
     <button type="button" class="button">ODINSTALOVAT</button>
