--- a/Inf/inf.html
+++ b/Inf/inf.html
@@ -9,7 +9,7 @@
     <nav>
         <a href="https://m-beran.github.io/">zpet</a>
     </nav>
-    <h1>web pro inf</h1>
+    <h1>inf</h1>
     <br><hr>
     <h3>jak pridat IMG</h3>
     <h5>prostý obrázek</h5>
