--- a/Inf/inf.html
+++ b/Inf/inf.html
@@ -11,6 +11,7 @@
     </nav>
     <h1>inf</h1>
     <br><hr>
+<pre>&lt;link rel="stylesheet" href="soubor.css"></pre><br>
     <h3>jak pridat IMG</h3>
     <h5>prostý obrázek</h5>
     <pre>
