--- a/index.html
+++ b/index.html
@@ -2,80 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styl.css">
-    <title>m-beran Web</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="image/linux.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="style/style.css">
+    <title>Linux Guide</title>
 </head>
 <body>
-    <h1>Když se chceš ODINSTALOVAT</h1>
-    <button type="button" class="button">ODINSTALOVAT</button>
-    <p>Počet Odinstalování se: <span id="clickCounter">?</span></p>
-
-    <!-- Firebase JS SDK -->
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-analytics.js";
-        import { getDatabase, ref, set, get } from "https://www.gstatic.com/firebasejs/11.4.0/firebase-database.js";
-
-        // Your web app's Firebase configuration
-        const firebaseConfig = {
-            apiKey: "sub_8Qzd9pOYFYwUBDHC5714XgCsPnZTuKT3Gl78lj",
-            authDomain: "m-beransite.firebaseapp.com",
-            projectId: "m-beransite",
-            storageBucket: "m-beransite.firebasestorage.app",
-            messagingSenderId: "454468970755",
-            appId: "1:454468970755:web:6946dceb4fd98566eea136",
-            measurementId: "G-T1Q3686WF1"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-
-        // Initialize Realtime Database
-        const database = getDatabase(app, 'https://m-beransite-default-rtdb.europe-west1.firebasedatabase.app');
-        const clicksRef = ref(database, 'clicks/');
-
-        // Zobrazení počtu kliknutí na stránce
-        const clickCounterElement = document.getElementById("clickCounter");
-
-        // Funkce pro získání počtu kliknutí z Firebase
-        function updateClickCount() {
-            get(clicksRef).then((snapshot) => {
-                if (snapshot.exists()) {
-                    // Pokud existuje hodnota, nastavíme ji do HTML
-                    clickCounterElement.innerText = snapshot.val();
-                } else {
-                    // Pokud neexistuje žádná hodnota, nastavíme 0
-                    clickCounterElement.innerText = 0;
-                }
-            }).catch((error) => {
-                console.error("Chyba při načítání dat:", error);
-            });
-        }
-
-        // Počáteční načtení počtu kliknutí z Firebase
-        updateClickCount();
-
-        // Zpracování kliknutí na tlačítko
-        const button = document.querySelector(".button");
-        button.addEventListener("click", () => {
-            // Získání aktuálního počtu kliknutí
-            get(clicksRef).then((snapshot) => {
-                let currentCount = snapshot.exists() ? snapshot.val() : 0;
-                currentCount++; // Zvyšte počet kliknutí
-
-                // Uložení aktualizovaného počtu do Firebase
-                set(clicksRef, currentCount);
-
-                // Aktualizace zobrazení počtu na stránce
-                clickCounterElement.innerText = currentCount;
-
-                // Zobrazení alertu
-                alert('ODINSTALOVÁNO');
-            });
-        });
-    </script>
+    <script src="script/script.js"></script>
+    <h1>Linux Guide</h1>
+    <hr>
+    
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="index.html">Home</a>
+        <a href="linuxcmd.html">Linux Příkazy</a>
+        <a href="linuxdistros.html">Linux Distribuce</a>
+        <a href="archinstalation.html">Jak nainstalovat Arch</a>
+        <a href="odinstalovat.html">Odinstalovat se (nehodnotit)</a>
+        <a href="about.html">O mně</a>
+    </div>
+    <span style="font-size:40px;cursor:pointer" onclick="openNav()">&#9776; MENU</span>
+    <div id="main">
+        <div class="paper">
+                
+        </div>
+    </div>
 </body>
 </html>
