--- a/archinstalation.html
+++ b/archinstalation.html
@@ -30,11 +30,17 @@
                     tento instalační postup stahuje balíčky z online repozitářů, budeme potřebovat připojení k internetu. </a>
                 <br><br>
                 <a>Vzhledem k tomu doporučuji alespon disk o velikosti 8GB a alespoň 1GiB Ram</a>
+
                 <h2>Instalace obrazu na USB:</h2>
                 <br>
                 <a>Pro získání obrazu navštivte <a href="https://archlinux.org/download/" target="_blank">oficiální stránku</a></a>
                 <a>Zde pak stažený iso obarz nahrajte do usb pomocí softwaru např.: Rufus, BalenaEtcher apod...</a>
-                <a>podrobnou instalaci nebudu zmiňovat jelikož o tom tanto článek není</a>
+                <br>
+                <a class="dodatek">Podrobnou instalaci nebudu zmiňovat jelikož o tom tento článek není</a>
+
+                <h2>Spuštění instalace:</h2>
+                <a>Vložte usb s obrazem do pc a nabootujte potom by se vám mělo zobrazit něco takového:</a>
+                <br><img src="image/1.png" alt="domovskaobrazovkaarch">
         </div>
     </div>
 </body>
