--- a/odinstalovat.html
+++ b/odinstalovat.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Když se chceš ODINSTALOVAT</h1>
     <button type="button" class="button">ODINSTALOVAT</button>
-    <p>Počet Odinstalování se: <span id="clickCounter">?</span></p>
+    <p>Počet odinstalování se: <span id="clickCounter">?</span></p>
 
     <!-- Firebase JS SDK -->
     <script type="module">
