--- a/archinstalation.html
+++ b/archinstalation.html
@@ -40,7 +40,55 @@
 
                 <h2>Spuštění instalace:</h2>
                 <a>Vložte usb s obrazem do pc a nabootujte potom by se vám mělo zobrazit něco takového:</a>
-                <br><img src="image/1.png" alt="domovskaobrazovkaarch">
+                <br><img src="image/1.png" alt="img"><br>
+                <a>Pomocí šipek ↑ ↓ na klávesnici se můžete pohybovat v nabídce</a>
+                <br>
+                <a class="zvyraznit">Zvolíme první možnost "Arch Linux install medium (x86_64, BIOS)" pomocí tlačítka ENTER</a>
+                <br><br>
+                <a>Po zvolení bychom se měli dostat na tuto obrazovku</a>    
+                <br><img src="image/2.png" alt="img"><br>
+
+                <h2>Nastavení lokalizace:</h2>
+                <br><img src="image/3.png" alt="img"><br>
+                <br><img src="image/4.png" alt="img"><br>
+                <br><img src="image/5.png" alt="img"><br>
+                <br><img src="image/6.png" alt="img"><br>
+                <br><img src="image/7.png" alt="img"><br>
+                <br><img src="image/8.png" alt="img"><br>
+                <br><img src="image/9.png" alt="img"><br>
+                <br><img src="image/10.png" alt="img"><br>
+                <br><img src="image/11.png" alt="img"><br>
+                <br><img src="image/12.png" alt="img"><br>
+                <br><img src="image/13.png" alt="img"><br>
+                <br><img src="image/14.png" alt="img"><br>
+                <br><img src="image/15.png" alt="img"><br>
+                <br><img src="image/16.png" alt="img"><br>
+                <br><img src="image/17.png" alt="img"><br>
+                <br><img src="image/18.png" alt="img"><br>
+                <br><img src="image/19.png" alt="img"><br>
+                <br><img src="image/20.png" alt="img"><br>
+                <br><img src="image/21.png" alt="img"><br>
+                <br><img src="image/22.png" alt="img"><br>
+                <br><img src="image/23.png" alt="img"><br>
+                <br><img src="image/24.png" alt="img"><br>
+                <br><img src="image/25.png" alt="img"><br>
+                <br><img src="image/26.png" alt="img"><br>
+                <br><img src="image/27.png" alt="img"><br>
+                <br><img src="image/28.png" alt="img"><br>
+                <br><img src="image/29.png" alt="img"><br>
+                <br><img src="image/30.png" alt="img"><br>
+                <br><img src="image/31.png" alt="img"><br>
+                <br><img src="image/32.png" alt="img"><br>
+                <br><img src="image/33.png" alt="img"><br>
+                <br><img src="image/34.png" alt="img"><br>
+                <br><img src="image/35.png" alt="img"><br>
+                <br><img src="image/36.png" alt="img"><br>
+                <br><img src="image/37.png" alt="img"><br>
+                <br><img src="image/38.png" alt="img"><br>
+                <br><img src="image/39.png" alt="img"><br>
+                <br><img src="image/40.png" alt="img"><br>
+
+
         </div>
     </div>
 </body>
