--- a/index.html
+++ b/index.html
@@ -24,7 +24,19 @@
     <span style="font-size:40px;cursor:pointer" onclick="openNav()">&#9776; MENU</span>
     <div id="main">
         <div class="paper">
-                
+                    <h2>Vítej na Linux Guide</h2>
+                    <p>Tento web slouží jako jednoduchý průvodce světem Linuxu – od základních příkazů až po instalaci Arch Linuxu.</p>
+
+                    <p>Web je neustále ve vývoji, takže se může časem rozrůst o další témata jako:</p>
+                    <ul>
+                        <li> Vlastní skripty a automatizace</li>
+                        <li> Hraní her na Linuxu (např. War Thunder, ESO, Minecraft)</li>
+                        <li> Správa balíčků a práce s terminálem</li>
+                    </ul>
+
+                    <blockquote class="motto">
+                        "Computer is like air conditioning - it becomes useless when you open windows."
+                    </blockquote>
         </div>
     </div>
 </body>
