--- a/linuxdistros.html
+++ b/linuxdistros.html
@@ -18,6 +18,7 @@
         <a href="linuxcmd.html">Linux Příkazy</a>
         <a href="linuxdistros.html">Linux Distribuce</a>
         <a href="archinstalation.html">Jak nainstalovat Arch</a>
+        <a href="odinstalovat.html">Odinstalovat se (nehodnotit)</a>
         <a href="about.html">O mně</a>
     </div>
     <span style="font-size:40px;cursor:pointer" onclick="openNav()">&#9776; MENU</span>
