--- a/archinstalation.html
+++ b/archinstalation.html
@@ -288,6 +288,10 @@
 
 
         </div>
+        <footer style="text-align: center; font-size: 0.9rem; color: gray; padding: 1rem;">
+            © 2025 Matyáš Beran. Use at your own risk. I take no responsibility for any damage caused by following this guide.
+        </footer>
+
     </div>
 </body>
 </html>
