--- a/linuxdistros.html
+++ b/linuxdistros.html
@@ -23,10 +23,9 @@
     </div>
     <span style="font-size:40px;cursor:pointer" onclick="openNav()">&#9776; MENU</span>
     <div id="main">
-    <a>ahojda</a>
-
-
-    
+        <div class="paper">
+            
+        </div>
     </div>
 </body>
 </html>
